libpam-csc (1.4) stable testing; urgency=low

  * Check that conv and conv->conv are non-null (fixes cron segfault)

 -- David Bartley <dtbartle@csclub.uwaterloo.ca>  Sun, 14 Oct 2007 01:59:54 -0400

libpam-csc (1.3) stable testing; urgency=low

  * Added allowed usernames check
  * Ignore entries without the objectClass=member attribute

 -- David Bartley <dtbartle@csclub.uwaterloo.ca>  Thu, 09 Aug 2007 04:03:37 -0400

libpam-csc (1.2) stable testing; urgency=low

  * Optimized querying by using single query and using asynch functions
  * Added preliminary code for detecting CS accounts
  * Refactored variable names to use underscores instead of camel-case
  * Prefixed helper functions with pam_csc_
  * Added -g to compiler flags

 -- David Bartley <dtbartle@csclub.uwaterloo.ca>  Fri, 27 Jul 2007 13:17:35 -0400

libpam-csc (1.1) unstable; urgency=low

  * Removed hardcoding of URI.

 -- David Bartley <dtbartle@csclub.uwaterloo.ca>  Fri, 27 Jul 2007 08:40:21 -0400

libpam-csc (1.0) unstable; urgency=low

  * Initial Release.

 -- David Bartley <dtbartle@csclub.uwaterloo.ca>  Sun, 24 Jun 2007 23:18:22 -0400